@@ -1156,7 +1156,7 @@ namespace MeGUI
                     bForceAdmin = true;
             }
 
-            // Check if the program can write to the program and avisynth plugin dir
+            // Check if the program can write to the program dir
             if (!FileUtil.IsDirWriteable(Path.GetDirectoryName(Application.ExecutablePath)))
                 bForceAdmin = true;
 
@@ -1455,27 +1455,11 @@ namespace MeGUI
             i.LogValue(".Net Framework", string.Format("{0}", OSInfo.DotNetVersionFormated(OSInfo.FormatDotNetVersion())));
 
             bool bAviSynthExists;
-            VideoUtil.getAvisynthVersion(ref i, out bAviSynthExists);
-            if (!bAviSynthExists)
-            {
-#if x86
-                if (File.Exists(Path.Combine(Path.GetDirectoryName(Application.ExecutablePath), "Avisynth_258.exe")))
-                {
-                    if (AskToInstallAvisynth() == true)
-                        System.Diagnostics.Process.Start(Path.Combine(Path.GetDirectoryName(Application.ExecutablePath), "Avisynth_258.exe"));
-                }
-                else
-                {
-                    if (AskToDownloadAvisynth() == true)
-                        System.Diagnostics.Process.Start("http://www.avisynth.org");
-                }
-#endif
-#if x64
-                if (AskToDownloadAvisynth() == true)
-                    System.Diagnostics.Process.Start("http://forum.doom9.org/showthread.php?t=152800");
-#endif
-            }
+            VideoUtil.getAvisynthVersion(i, out bAviSynthExists);
 
+            string devil = Path.Combine(Path.GetDirectoryName(Application.ExecutablePath), "devil.dll");
+            if (File.Exists(devil))
+                FileUtil.GetFileInformation("DevIL", devil, ref i);
             FileUtil.GetFileInformation("AvisynthWrapper", Path.GetDirectoryName(Application.ExecutablePath) + @"\AvisynthWrapper.dll", ref i);
             FileUtil.GetFileInformation("ICSharpCode.SharpZipLib", Path.GetDirectoryName(Application.ExecutablePath) + @"\ICSharpCode.SharpZipLib.dll", ref i);
             FileUtil.GetFileInformation("LinqBridge", Path.GetDirectoryName(Application.ExecutablePath) + @"\LinqBridge.dll", ref i);
@@ -1484,7 +1468,6 @@ namespace MeGUI
             FileUtil.GetFileInformation("MessageBoxExLib", Path.GetDirectoryName(Application.ExecutablePath) + @"\MessageBoxExLib.dll", ref i);
             FileUtil.GetFileInformation("SevenZipSharp", Path.GetDirectoryName(Application.ExecutablePath) + @"\SevenZipSharp.dll", ref i);
             FileUtil.GetFileInformation("7z", Path.GetDirectoryName(Application.ExecutablePath) + @"\7z.dll", ref i);
-
         }
 
         public void setOverlayIcon(Icon oIcon)
@@ -1512,24 +1495,6 @@ namespace MeGUI
                 Util.ThreadSafeRun(this, delegate { taskbarItem.SetOverlayIcon(this.Handle, oIcon.Handle, null); });
                 taskbarIcon = oIcon;
             }
-        }
-
-        private bool AskToDownloadAvisynth()
-        {
-            if (MessageBox.Show("MeGUI cannot find AviSynth on your system.\nWithout AviSynth, MeGUI will not run properly.\nDo you want to download and install it now?", "AviSynth missing",
-                                     MessageBoxButtons.YesNo, MessageBoxIcon.Warning) == DialogResult.Yes)
-                return true;
-            else
-                return false;
-        }
-
-        private bool AskToInstallAvisynth()
-        {
-            if (MessageBox.Show("MeGUI cannot find AviSynth on your system.\nWithout AviSynth, MeGUI will not run properly.\nDo you want to install it now?", "AviSynth missing",
-                                     MessageBoxButtons.YesNo, MessageBoxIcon.Warning) == DialogResult.Yes)
-                return true;
-            else
-                return false;
         }
 
         private bool AskToInstallComponents(bool bRestartRequired)
