@@ -1,3 +1,4 @@
+2184 portable AviSynth will be used if AviSynth is not installed
 2183 [File Indexer] added selectable FFMS index file location
                     added PGC handling
 2182 [x264] increased the maximum value for --vbv-maxrate and --vbv-bufsize. Bug #3573545
